# cellular_automaton

./: CMakeLists.txt  README.md  add_on.cc  add_on.hh  main.cc
data/: debug.sh  run.sh  valgrind.sh
data/brushes/: LWSW.brush  backRake.brush  backRake2.brush  blockLayingSwitchEngine.brush  ecologist.brush  emptySquare.brush  golgun.brush  halfmax.brush  planner.brush  puffer2.brush  shickEngine.brush  spaceRake.brush  spaceRake2.brush
src/: BrushSelector.cc  BrushSelector.hh  BrushSelector.hxx  CMakeLists.txt  Cell.cc  Cell.hh  Cell.hxx  CellBrush.cc  CellBrush.hh  CellBrush.hxx  CellEvolver.hh  CellEvolver.hxx  CellsBlocks.cc  CellsBlocks.hh  CellsBlocks.hxx  CellsQuadTree.cc  CellsQuadTree.hh  CellsQuadTree.hxx  CellsQuadTreeNode.cc  CellsQuadTreeNode.hh  CellsQuadTreeNode.hxx  CellsQuadTreeNode_border.hh  CellsQuadTreeNode_border.hxx  Colony.cc  Colony.hh  Colony.hxx  ColonyRenderer.cc  ColonyRenderer.hh  ColonyRenderer.hxx  ColonyScheduler.cc  ColonyScheduler.hh  ColonyScheduler.hxx  ColonyStatus.cc  ColonyStatus.hh  ColonyStatus.hxx  ColonyTile.cc  ColonyTile.hh  ColonyTile.hxx  ColorPalette.hh  ColorPalette.hxx  (+12 more)
